apps/homepage/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: halo
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
